# pethublocal

./: .gitignore  Dockerfile  LICENSE  README.md  docker-build.sh  docker-run-local.sh  docker-run.sh  pyproject.toml
.github/workflows/: all.yml
mqtt/: download_aws_root_cert.sh  tls.conf
pethublocal/: __init__.py  consts.py  enums.py  frontend.py  functions.py  generate.py  message.py
pethublocal/cli/: __init__.py
pethublocal/firmware/: Firmware-2.201-40.bin.pethubslocal.local  Firmware-2.201-52.bin.pethubslocal.local  Firmware-2.201-58.bin.AWSCA  Firmware-2.201-59.bin.AWSCA
pethublocal/static/: ca.key  ca.pem  gencsr_sign_hub_certificate.sh  hub.cnf  hub.key  hub.key.pethubslocal.local  hub.pem  hub.pem.pethubslocal.local  index.html  make_ca.sh  make_hub_certificate.sh
test/: __init__.py  logger.py  test_catflap.py  test_catflap_generate.py  test_feeder.py  test_feeder_generate.py  test_hub.py  test_hub_generate.py  test_petdoor.py  test_petdoor_generate.py  test_poseidon.py  test_poseidon_generate.py
