[tool.poetry]
authors = ["Peter Lambrechtsen <peter@crypt.nz>"]
classifiers = [
  "Topic :: Home Automation",
  "Topic :: Software Development",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Intended Audience :: Developers",
  "Intended Audience :: End Users/Desktop",
  "Operating System :: OS Independent",
  "Environment :: Console",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Development Status :: 4 - Beta",
]
description = "A replacement for SurePetCare Connect cloud service."
documentation = "https://pethublocal.github.io/"
homepage = "https://pethublocal.github.io/"
keywords = ["pethublocal", "surepetcare", "home-assistant"]
license = "GPLv3"
name = "pethublocal"
readme = "README.md"
repository = "https://github.com/PetHubLocal/pethublocal"
version = "2.0"

[tool.poetry.dependencies]
python = "==3.*,>=3.7.0"
python-box = "^6.0.2"
requests = "^2.24.0"
python-dateutil = "^2.8.2"
click = "^8.1.3"
dnspython = "^2.2.1"
pyjwt = "^2.3.0"
pygments = "^2.11.2"
janus = "^1.0.0"
paho-mqtt = "^1.5.1"
multidict = "^6.0.2"
aiohttp = "^3.8.1"
asyncio-mqtt = "^0.12.1"
python-socketio = "^5.4.0"

[tool.poetry.dev-dependencies]
pylint = "^2.10.2"
pytest = "^7.1.2"

[tool.poetry.scripts]
pethublocal = 'pethublocal.cli:cli'

[tool.pylint.MASTER]
ignore = ["tests", "const.py"]
#disable = ["missing-module-docstring", "missing-class-docstring", "missing-function-docstring"]

# Use a conservative default here; 2 should speed up most setups and not hurt
# any too bad. Override on command line as appropriate.
jobs = 3
load-plugins = [
  "pylint.extensions.code_style",
  "pylint.extensions.typing",
  "pylint_strict_informational",
]

[tool.pylint.BASIC]
good-names = ["_", "id", "sp", "at"]

[tool.pylint.TYPING]
py-version = "3.9"
runtime-typing = false

[tool.pylint.FORMAT]
max-line-length = 200
disable = [ "invalid-name", "too-many-nested-blocks", "too-many-branches", "too-many-statements", "too-many-lines" ]

#[tool.pylint.messages_control]

[tool.pytest.ini_options]
addopts = "--cov --setup-show --code-highlight=yes --verbose"
minversion = "6.0"
testpaths = ["tests"]

[tool.coverage.paths]
source = ["pethublocal"]

[tool.coverage.run]
branch = true
source = ["pethublocal"]

[tool.coverage.report]
show_missing = true

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry_core>=1.0.0"]